--- a/style/main.css
+++ b/style/main.css
@@ -594,6 +594,47 @@ margin-top: 5px;
     .tile.tile-super .tile-inner {
       font-size: 10px; } }
 
+.time-container {
+  position: relative;
+  display: inline-block;
+  background: #bbada0;
+  padding: 15px 25px;
+  font-size: 25px;
+  height: 25px;
+  line-height: 47px;
+  font-weight: bold;
+  border-radius: 10px;
+  color: white;
+  margin-top: 8px;
+  text-align: center;
+  margin-top: 30px;
+  padding: 20px;
+  margin-right: 30px;
+}
+
+.time-label {
+  font-size: 13px;
+  line-height: 13px;
+  text-transform: uppercase;
+  color: #eee4da;
+}
+
+.time-value {
+  font-size: 35px;
+  height: 25px;
+  line-height: 47px;
+}
+
+.time-warning {
+  color: #ff6b6b;
+  animation: pulse 0.5s infinite alternate;
+}
+
+@keyframes pulse {
+  from { opacity: 1; }
+  to { opacity: 0.5; }
+}
+
 @-webkit-keyframes appear {
   0% {
     opacity: 0;
